# Backgammon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TAGS  build.bat
GUI/: GUI.cpp  GUI.h  GUI_GLFW.cpp  GUI_GLFW.h  GUI_SFML.cpp  GUI_SFML.h
Game/: #Game.cpp#  Game.cpp  Game.h
Utility/: Utility.cpp  Utility.h
source/: main.cpp
src/: main.cpp
src/GUI/: GUI_GLFW.cpp  GUI_GLFW.h  GUI_SFML.cpp  GUI_SFML.h
src/Game/: Game.cpp  Game.h
src/Utility/: Utility.cpp  Utility.h
